cmake_minimum_required(VERSION 3.27)
project(c___journey)

set(CMAKE_CXX_STANDARD 17)

add_executable(c___journey main.cpp
        "variables and constants/variables.cpp"
        "variables and constants/variables.cpp"
        "variables and constants/challenge6.cpp"
        "variables and constants/constants.cpp")
